--- a/templates/snippet/foot.html
+++ b/templates/snippet/foot.html
@@ -1,4 +1,2 @@
-<a href="https://spmjs.org">spmjs</a> •
-<a href="http://seajs.org">Sea.js</a> •
-<a href="https://github.com/spmjs/nico-cmd">nico-cmd</a> •
-<a href="{{system.homepage}}">{{system.name}}</a>
+<!--<a href="{{system.homepage}}">{{system.name}}</a>-->
+<a href="http://fed.beibei.com/xdoc">xdoc</a>
