--- a/templates/snippet/head.html
+++ b/templates/snippet/head.html
@@ -139,3 +139,4 @@
 {%- for value in pkg.spm.dependencies %}
 <script src="{{value}}"></script>
 {%- endfor %}
+<script src="/src/index.js"></script>
