--- a/templates/snippet/head.html
+++ b/templates/snippet/head.html
@@ -139,4 +139,4 @@
 {%- for value in pkg.spm.dependencies %}
 <script src="{{value}}"></script>
 {%- endfor %}
-<script src="/src/index.js"></script>
+<script src="/src/{{pkg.spm.main}}"></script>
