--- a/templates/layout.html
+++ b/templates/layout.html
@@ -59,6 +59,10 @@
     </aside>
     {%- block afterside %}{% endblock %}
     <div id="content-wrapper">
+        {%- for value in pkg.spm.dependencies %}
+        <script src="{{value}}"></script>
+        {%- endfor %}
+        <script src="{{pkg.spm.main}}"></script>
         <div id="content">{% block content %}{% endblock %}</div>
     </div>
     {%- endblock %}
