不编译 历史版本文件

--- a/templates/snippet/head.html
+++ b/templates/snippet/head.html
@@ -1,22 +1,3 @@
-{%- if !config.package.spm.noIconfont %}
-<style>
-    /* alipay iconfont */
-    @font-face {
-        font-family: "rei";
-        src: url("https://i.alipayobjects.com/common/fonts/rei.eot?20130423"); /* IE9 */
-        src: url("https://i.alipayobjects.com/common/fonts/rei.eot?20130423#iefix") format("embedded-opentype"), /* IE6-IE8 */ url("https://i.alipayobjects.com/common/fonts/rei.woff?20130423") format("woff"), /* chrome 6+、firefox 3.6+、Safari5.1+、Opera 11+ */ url("https://i.alipayobjects.com/common/fonts/rei.ttf?20130423") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+ */ url("https://i.alipayobjects.com/common/fonts/rei.svg?20130423#rei") format("svg"); /* iOS 4.1- */
-    }
-
-    .iconfont {
-        font-family: "rei";
-        font-style: normal;
-        font-weight: normal;
-        cursor: default;
-        -webkit-font-smoothing: antialiased;
-    }
-</style>
-{%- endif %}
-
 
 {%- set enginefiles = engines %}
 {%- set pkg = config.package %}
@@ -29,8 +10,7 @@
 
 <!--{%- else %}-->
 
-<!--<script src="{{config.assets_host}}/??-->
-<!--seajs/seajs/2.2.0/sea.js"></script>-->
+<script src="{{static_url(js/require.js)"></script>
 
 <!--{%- if pkg|is_plugin_text or pkg|is_runtime_handlebars %}-->
 <!--<script src="{{config.assets_host}}/seajs/seajs-text/1.0.2/seajs-text.js"></script>-->
