去掉静态文件依赖，减小大小

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,6 +19,11 @@
     <![endif]-->
     {%- endblock %}
     {%- block afterstyle %}{% endblock %}
+    <script>
+        requirejs.config({
+            baseUrl: '/widget'
+        });
+    </script>
 </head>
 <body class="{%- if config.isCssModule %}alice{%- endif %}">
 <div id="body-wrapper">
@@ -73,5 +78,5 @@
     </footer>
 </div>
 </body>
-<script src="{{static_url('js/site.js')}}"></script>
+<script src=/static/js/site.js></script>
 </html>
