去掉静态文件依赖，减小大小

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href=/static/css/site.css>
     <link rel="stylesheet" href=/static/css/solarized.css>
     <script src=/static/js/jquery-1.11.0.js></script>
+    <script src=/static/js/handlebars.js></script>
     <script src=/static/js/require.js></script>
     {%- include "snippet/head.html" %}
     <!--[if lt IE 9]>
