--- a/templates/mocha-runner.html
+++ b/templates/mocha-runner.html
@@ -4,17 +4,30 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <title>{% block title %}{{config.package.name|title}} Mocha Runner{% endblock %}</title>
-    <link href="{{static_url('css/mocha.css')}}" type="text/css" rel="stylesheet" charset="utf-8">
+    <link href="/static/bower_components/mocha/mocha.css" type="text/css" rel="stylesheet" charset="utf-8">
   </head>
   <body>
     {%- include "snippet/head.html" %}
-    <script src="{{config.assets_host}}/gallery/mocha/1.9.0/mocha.js"></script>
-    <script src="{{config.assets_host}}/gallery/sinon/1.6.0/sinon.js"></script>
+    <script src=/static/js/jquery-1.11.0.js></script>
+    <script src=/static/js/handlebars.js></script>
+    <script src="/static/bower_components/mocha/mocha.js"></script>
+    <script src="/static/bower_components/sinon/sinon-1.12.2.js"></script>
+    <script src="/static/bower_components/expect/index.js"></script>
+    <script src=/static/js/require.js></script>
     <!--[if lte IE 8]>
-    <script src="{{config.assets_host}}/gallery/sinon/1.6.0/sinon-ie.js"></script>
-    <![endif]--> 
+    <!--<script src="{{config.assets_host}}/gallery/sinon/1.6.0/sinon-ie.js"></script>-->
+    <![endif]-->
     <div id="mocha"></div>
     <script>
+      requirejs.config({
+        baseUrl: '/widget',
+        map: {
+          '*': {
+            'css': '../static/bower_components/require-css/css' // or whatever the path to require-css is
+          }
+        }
+      });
+
       (function() {
         mocha.setup('bdd');
 
@@ -26,14 +39,14 @@
           specs[i] = './' + tests[i];
         }
 
-        seajs.use(specs, function() {
+        require(specs, function() {
           if (window.mochaPhantomJS) {
             mochaPhantomJS.run()
           } else {
             mocha.run()
           }
         })
-      })();
+      }());
     </script>
   </body>
 </html>
